--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -131,9 +131,6 @@
     <ClCompile Include="Engine\Scene\Camera\BaseCamera.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="Engine\Scene\Camera\CameraManager.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
     <ClCompile Include="Game\Camera\GameCamera.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
@@ -255,9 +252,6 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="Engine\Core\Graphics\GPUObject\SceneConstBuffer.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\Scene\Light\LightManager.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="Engine\Scene\Light\PunctualLight.cpp">
@@ -536,6 +530,15 @@
     <ClCompile Include="Game\Editor\LevelEditor.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\Core\Graphics\RenderEngine.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Scene\SceneView.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Core\Graphics\GraphicsPlatform.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -582,7 +585,6 @@
     <ClInclude Include="Lib\MathUtils\Vector4.h" />
     <ClInclude Include="Engine\Collision\Collider.h" />
     <ClInclude Include="Engine\Scene\Camera\BaseCamera.h" />
-    <ClInclude Include="Engine\Scene\Camera\CameraManager.h" />
     <ClInclude Include="Game\Camera\GameCamera.h" />
     <ClInclude Include="Engine\Scene\Camera\LightViewCamera.h" />
     <ClInclude Include="Engine\Scene\Light\PunctualLight.h" />
@@ -629,7 +631,6 @@
     <ClInclude Include="Engine\Core\ECS\Components\MaterialComponent.h" />
     <ClInclude Include="Engine\Core\Graphics\Descriptors\BaseDescriptor.h" />
     <ClInclude Include="Engine\Core\Graphics\GPUObject\SceneConstBuffer.h" />
-    <ClInclude Include="Engine\Scene\Light\LightManager.h" />
     <ClInclude Include="Engine\Utility\UVHelper.h" />
     <ClInclude Include="Engine\Utility\SimpleAnimation.h" />
     <ClInclude Include="Game\Object3D\Player\Player.h" />
@@ -735,6 +736,9 @@
     <ClInclude Include="Engine\Core\Graphics\Raytracing\RaytracingStructures.h" />
     <ClInclude Include="Engine\Core\Graphics\PostProcess\DepthTexture.h" />
     <ClInclude Include="Game\Editor\LevelEditor.h" />
+    <ClInclude Include="Engine\Core\Graphics\RenderEngine.h" />
+    <ClInclude Include="Engine\Scene\SceneView.h" />
+    <ClInclude Include="Engine\Core\Graphics\GraphicsPlatform.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\MS\Triangle.MS.hlsl" />
