--- a/Project/DirectXGame.vcxproj
+++ b/Project/DirectXGame.vcxproj
@@ -986,6 +986,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Game\Object3D\Player\Behavior\Parts\Body\BodyDashBehavior.h" />
     <ClInclude Include="Game\Object3D\Player\Behavior\Parts\Body\BodyFirstAttackBehavior.h" />
     <ClInclude Include="Game\Object3D\Player\Behavior\Parts\Body\BodyParryBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\Body\BodySecondAttackBehavior.h" />
     <ClInclude Include="Game\Object3D\Player\Behavior\Parts\Body\BodyThirdAttackBehavior.h" />
     <ClInclude Include="Game\Object3D\Player\Behavior\Parts\Body\BodyWaitBehavior.h" />
     <ClInclude Include="Game\Object3D\Player\Behavior\Parts\Body\BodyWalkBehavior.h" />
@@ -1021,12 +1022,35 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\LeftHand\LeftHandDashAttackBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\LeftHand\LeftHandDashBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\LeftHand\LeftHandFirstAttackBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\LeftHand\LeftHandParryBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\LeftHand\LeftHandSecondAttackBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\LeftHand\LeftHandThirdAttackBehavior.h" />
     <ClInclude Include="Game\Object3D\Player\Behavior\Parts\LeftHand\LeftHandWaitBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\LeftHand\LeftHandWalkBehavior.h" />
     <ClInclude Include="Game\Object3D\Player\Behavior\Parts\LeftSword\LeftSwordDashAttackBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\LeftSword\LeftSwordDashBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\LeftSword\LeftSwordFirstAttackBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\LeftSword\LeftSwordParryBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\LeftSword\LeftSwordSecondAttackBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\LeftSword\LeftSwordThirdAttackBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\LeftSword\LeftSwordWaitBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\LeftSword\LeftSwordWalkBehavior.h" />
     <ClInclude Include="Game\Object3D\Player\Behavior\Parts\RightHand\RightHandDashAttackBehavior.h" />
     <ClInclude Include="Game\Object3D\Player\Behavior\Parts\RightHand\RightHandDashBehavior.h" />
     <ClInclude Include="Game\Object3D\Player\Behavior\Parts\RightHand\RightHandFirstAttackBehavior.h" />
     <ClInclude Include="Game\Object3D\Player\Behavior\Parts\RightHand\RightHandParryBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\RightHand\RightHandSecondAttackBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\RightHand\RightHandThirdAttackBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\RightHand\RightHandWaitBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\RightHand\RightHandWalkBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\RightSword\RightSwordDashAttackBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\RightSword\RightSwordDashBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\RightSword\RightSwordFirstAttackBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\RightSword\RightSwordParryBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\RightSword\RightSwordSecondAttackBehavior.h" />
     <ClInclude Include="Game\Object3D\Player\Behavior\Parts\RightSword\RightSwordThirdAttackBehavior.h" />
     <ClInclude Include="Game\Object3D\Player\Behavior\Parts\RightSword\RightSwordWaitBehavior.h" />
     <ClInclude Include="Game\Object3D\Player\Behavior\Parts\RightSword\RightSwordWalkBehavior.h" />
