colliderをblenderから適応できるようにしました

--- a/Project/DirectXGame.vcxproj
+++ b/Project/DirectXGame.vcxproj
@@ -515,6 +515,10 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Game\Object3D\Environment\FieldCrossMarkWall.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Game\Object3D\Player\Behavior\Parts\Base\IPlayerBehavior.cpp" />
     <ClCompile Include="Game\Object3D\Player\Behavior\Parts\Body\BodyDashAttackBehavior.cpp" />
     <ClCompile Include="Game\Object3D\Player\Behavior\Parts\Body\BodyDashBehavior.cpp" />
@@ -975,6 +979,10 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Game\Editor\LevelEditor\SceneBuilder.h" />
     <ClInclude Include="Game\Object2D\Base\ITransition.h" />
     <ClInclude Include="Game\Object2D\SceneTransition\FadeTransition.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Game\Object3D\Environment\FieldCrossMarkWall.h">
       <SubType>
       </SubType>
     </ClInclude>
